create endpoint for newsletter and handle subscription

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "eslint ./{src,public}/**/*.js"
     },
     "dependencies": {
+        "body-parser": "^1.18.3",
         "cors": "^2.8.4",
         "express": "^4.16.3",
         "http-proxy-middleware": "^0.18.0",
