--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "start": "wt serve webtask-zoho.js",
-        "test": "eslint ./{src,public}/**/*.js"
+        "test": "eslint ./*.js"
     },
     "dependencies": {
         "body-parser": "^1.18.3",
@@ -14,9 +14,12 @@
         "webtask-tools": "^3.2.1"
     },
     "devDependencies": {
-        "babel-eslint": "^8.2.5",
-        "eslint": "^4.19.1",
-        "eslint-config-ascribe": "^3.0.5",
-        "eslint-plugin-import": "^2.13.0"
+        "eslint": "^5.0.1",
+        "eslint-config-oceanprotocol": "^1.0.4",
+        "eslint-config-standard": "^11.0.0",
+        "eslint-plugin-import": "^2.13.0",
+        "eslint-plugin-node": "^6.0.1",
+        "eslint-plugin-promise": "^3.8.0",
+        "eslint-plugin-standard": "^3.1.0"
     }
 }
