--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "start": "wt serve webtask-zoho.js",
+        "start": "wt serve webtask-bounties.js",
         "test": "eslint ./*.js"
     },
     "dependencies": {
         "body-parser": "^1.18.3",
         "cors": "^2.8.4",
-        "express": "^4.16.3",
+        "express": "^4.16.4",
         "request": "^2.88.0",
         "webtask-tools": "^3.4.0"
     },
     "devDependencies": {
-        "eslint": "^5.4.0",
-        "eslint-config-oceanprotocol": "^1.1.1",
+        "eslint": "^5.7.0",
+        "eslint-config-oceanprotocol": "^1.2.0",
         "eslint-config-standard": "^12.0.0",
         "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-node": "^7.0.1",
-        "eslint-plugin-promise": "^4.0.0",
+        "eslint-plugin-promise": "^4.0.1",
         "eslint-plugin-security": "^1.4.0",
         "eslint-plugin-standard": "^4.0.0"
     }
