--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "start": "wt serve webtask-mailchimp.js",
+        "start": "wt serve webtask-bounties.js",
         "test": "eslint ./*.js"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "body-parser": "^1.18.3",
         "cors": "^2.8.4",
         "express": "^4.16.4",
+        "ms": "^2.1.1",
         "request": "^2.88.0",
         "webtask-tools": "^3.4.0"
     },
