--- a/package.json
+++ b/package.json
@@ -16,13 +16,7 @@
         "webtask-tools": "^3.4.0"
     },
     "devDependencies": {
-        "eslint": "^5.7.0",
-        "eslint-config-oceanprotocol": "^1.2.0",
-        "eslint-config-standard": "^12.0.0",
-        "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-node": "^7.0.1",
-        "eslint-plugin-promise": "^4.0.1",
-        "eslint-plugin-security": "^1.4.0",
-        "eslint-plugin-standard": "^4.0.0"
+        "eslint": "^5.8.0",
+        "eslint-config-oceanprotocol": "^1.3.0"
     }
 }
