--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "start": "wt serve webtask-medium.js",
+        "start": "wt serve webtask-meetup.js",
         "test": "eslint ./*.js"
     },
     "dependencies": {
-        "axios": "^0.19.0",
-        "body-parser": "^1.18.3",
-        "cors": "^2.8.4",
-        "express": "^4.16.4",
-        "ms": "^2.1.1",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "ms": "^2.1.2",
         "request": "^2.88.0",
         "webtask-tools": "^3.4.0"
     },
