--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "test": "eslint ./*.js"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "dotenv": "^8.1.0",
         "express": "^4.17.1",
         "ms": "^2.1.2",
         "request": "^2.88.0",
